# BMService

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  build_aarch64.sh
examples/: bmservice_squad.py
examples/3d-unet-brats19/: bmservice_SUT.py  ex_run.py
examples/basicvsr/: .gitignore  README.md  evaluate.py  export.patch  inference.py  metrics.py
examples/dlrm/: bmservice_dlrm.py
examples/tacotron/: .gitignore  README.md  build_bmodel.py  convert_tacotron22onnx.py  convert_waveglow2onnx.py  inference.py  inference_bmservice.py  pt_post_mel.npy  pt_post_mel_512.npy  requirements.txt  test_infer.py  test_waveglow.py
examples/tacotron/waveglow/: arg_parser.py
python/bmservice/: main.py
python/bmservice/test_model/: compilation.bmodel
src/: BMCommonUtils.cpp  BMDevicePool.h  BMDeviceUtils.cpp  BMDeviceUtils.h  BMEnv.h  BMLog.h  BMNetwork.h  BMPipelinePool.h  BMQueue.cpp  BMQueue.h  BMThreadPool.h  BMUtils.cpp  BMUtils.h  main.cpp
src/framework/: BMCommonUtils.cpp  BMCommonUtils.h  BMDevicePool.cpp  BMDevicePool.h  BMDeviceUtils.cpp  BMDeviceUtils.h  BMLog.cpp  BMLog.h  BMNetwork.cpp  BMNetwork.h  BMPipelinePool.cpp  BMPipelinePool.h  BMQueue.h  BMThreadPool.cpp
src/lib/: interface.cpp  interface.h
src/main/: main.cpp
src/model/: bert.cpp  dlrm.cpp  inception.cpp  inception.h  resnet.cpp  ssd_resnet34.cpp  unet3d.cpp  yolov3.cpp  yolov5.cpp
src/tool/: BMDetectUtils.cpp  BMDetectUtils.h  BMDetectUtils.h.autosave  BMImageUtils.cpp  BMImageUtils.h
tests/: CMakeLists.txt  testBMPipeline.cpp  testBMQueue.cpp  testOpenCVLinkage.cpp
tools/: coco_eval.py
